appId: io.metamask
tags:
  - SRP
env:
  SRP: 'club badge diamond staff object stamp common maze blush food wedding foil'
---
# - runFlow: ../pages/loadElements.yaml
- assertVisible: ${output.addWallet.screenTitle}
- setClipboard: 'club badge diamond staff object stamp common maze blush food wedding foil'
- tapOn:
    id: seed-phrase-input
    waitToSettleTimeoutMs: 500
# - tapOn:
#     text: 'Paste'
#     waitToSettleTimeoutMs: 3000

# inputting SRP one by one was the most reliable way for importing wallet
- inputText: 'club '
- inputText: 'badge '
- inputText: 'diamond '
- inputText: 'staff '
- inputText: 'object '
- inputText: 'stamp '
- inputText: 'common '
- inputText: 'maze '
- inputText: 'blush '
- inputText: 'food '
- inputText: 'wedding '
- inputText: 'foil '
- doubleTapOn:
    text: ${output.addWallet.continueBtn}
    waitToSettleTimeoutMs: 500
