appId: io.metamask
tags:
  - onboarding
---
- runFlow: ../pages/loadElements.yaml
- assertVisible: ${output.onboarding.welcome.text}
- tapOn:
    id: ${output.onboarding.welcome.createNewWalletBtn}
    delay: 1000
    retryTapIfNoChange: false
    waitToSettleTimeoutMs: 20000
- assertVisible: ${output.onboarding.createPassword.title}
- tapOn:
    id: ${output.onboarding.createPassword.firstPasswordInput}
- inputText: metapass
- tapOn:
    id: ${output.onboarding.createPassword.secondPasswordInput}
- inputText: metapass
- doubleTapOn:
    id: ${output.onboarding.createPassword.termsCheckbox}
- tapOn:
    id: ${output.onboarding.createPassword.submitBtn}
    delay: 200
- tapOn:
    id: ${output.onboarding.backup.remindMeLaterBtn}
- tapOn:
    id: ${output.onboarding.backup.remindMeLaterBtn}
- assertVisible: ${output.onboarding.backup.skipTitle}
- tapOn:
    id: ${output.onboarding.backup.skipText}
- tapOn:
    id: ${output.onboarding.backup.skipBtn}
- tapOn:
    id: ${output.onboarding.metrics.optinBtn}
- assertVisible: ${output.onboarding.default_settings.remindLaterMessage}
- tapOn:
    id: ${output.onboarding.default_settings.doneBtn}
- assertVisible: ${output.onboarding.perps.title}
- tapOn:
    id: ${output.onboarding.perps.notNowBtn}
- assertVisible: ${output.wallet.accountName}
