appId: io.metamask
tags:
  - smoke
  - account
---
- runFlow: ../pages/loadElements.yaml
- launchApp:
    clearState: true
- runFlow: ../flows/onboarding-flow.yaml
- tapOn:
    id: ${output.wallet.accountPicker}
- tapOn:
    id: ${output.wallet.addAccountBtn}
    delay: 2000
- assertVisible: ${output.wallet.addWalletTitle}
- tapOn:
    id: ${output.wallet.addSrpAccountBtn}
- runFlow: ../flows/input-SRP-flow.yaml
- assertVisible: Wallet 2 imported
